docs: add Chinese README, LICENSE, and bilingual nav
- Add README_zh.md: localized Chinese edition (idiomatic, not machine-translated)
- Add LICENSE (MIT) referenced by both READMEs
- Add language switcher link to README.md (English | 中文)
- Expand README.md to full open-source front page: badges, structure tree,
  usage examples table, collapsible rule index, contribution guide